tests/ui/bitfield/signed_field_can_never_be_negative.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/bitfield/signed_field_can_never_be_negative.rs:5:1
  |
5 | #[bitfield::bitfield(16)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Signed type in field 0 can never be negative', $DIR/tests/ui/bitfield/signed_field_can_never_be_negative.rs:5:1
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)
